--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 					<i class="fa-solid fa-lock"></i>
 				</div>
 				<div class="input-box">
-					<input type="email" placeholder="email" required>
+					<input type="email" placeholder="emaiil" required>
 	               <i class="fa-regular fa-envelope"></i>
 				</div>
 				<div>
